2012-11-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/14567
	* Makefile.am (BFDTEST2_PROG): New.
	(bfdtest2_DEPENDENCIES): Likewise.
	(TEST_PROGS): Add $(BFDTEST2_PROG).
	* Makefile.in: Regenerated.
	* bfdtest2.c: New file.

2012-11-05  Stephane Carrez  <Stephane.Carrez@gmail.com>

	* MAINTAINERS: Update my email address.

2012-11-05  Alan Modra  <amodra@gmail.com>

	* configure.in: Apply 2012-09-10 change to config.in here.  Add
	__CONFIG_H__ check.
	* config.in: Regenerate.

2012-11-01  Tom Tromey  <tromey@redhat.com>

	* readelf.c (get_note_type): Handle NT_386_TLS, NT_386_IOPERM.

2012-10-30  Nick Clifton  <nickc@redhat.com>

	PR binutils/14779
	* configure.in: Add checks for wchar.h and mbstate_t.
	* config.in: Regenerate.
	* configure: Regenerate.
	* readelf.c: Conditionally include wchar.h.
	(print_symbol): Conditionally use mbstate_t.

2012-10-30  	Steve McIntyre  <steve.mcintyre@linaro.org>

	* readelf.c (decode_ARM_machine_flags): Recognise and display the
	new ARM hard-float/soft-float ABI flags for EABI_VER5. Split out
	the code for EABI_VER4 and EABI_VER5 to allow this.

2012-10-29  Alan Modra  <amodra@gmail.com>

	* dlltool.c (INIT_SEC_DATA): Move.
	(secdata <DLLTOOL_PPC>): Use here too.

2012-10-26  Nick Clifton  <nickc@redhat.com>

	* po/hr.po: New Croation translation.
	* configure.in (ALL_LINGUAS): Add hr.
	* configure: Regenerate.

2012-10-23  Cary Coutant  <ccoutant@google.com>

	* dwarf.c (do_debug_addr, do_debug_cu_index): New global flags.
	(load_debug_info): Fix typo.
	(cu_tu_indexes_read, shndx_pool, shndx_pool_size, shndx_pool_used):
	New global variables.
	(prealloc_cu_tu_list, add_shndx_to_cu_tu_entry, end_cu_tu_entry)
	(process_cu_tu_index, load_cu_tu_indexes, find_cu_tu_set)
	(display_cu_index): New functions.
	(dwarf_select_sections_by_names): Add "debug_addr", "cu_index".
	Sort entries alphabetically.
	(dwarf_select_sections_all): Set do_debug_addr, do_debug_cu_index.
	(debug_displays): Add .debug_cu_index, .debug_tu_index.